Mobile legends functionallity adapted

--- a/app/assets/stylesheets/components/_mobile-layers.scss
+++ b/app/assets/stylesheets/components/_mobile-layers.scss
@@ -1,7 +1,7 @@
 
 .c-mobile-layers {
 
-  .map-btns-container {
+  .layers-btns-container {
     position: absolute;
     top: $small-box-space + 35px;
     left: $small-box-space;
