--- a/app/views/map/_mobile_index.html.erb
+++ b/app/views/map/_mobile_index.html.erb
@@ -16,7 +16,7 @@
     <div id="map" class="c-map"></div>
 
     <div class="c-mobile-layers">
-      <div class="map-btns-container">
+      <div class="layers-btns-container">
         <button id="layersBtn" class="c-btn -primary -action -thin js-action-layers" data-action="layers" title="Layers">
           <svg class="c-icon -small -inverse">
             <use xlink:href="#icon-layers"></use>
@@ -25,16 +25,19 @@
 
         <div class="timeline-btn">
           <div id="timeline" class="timeline-mobile"></div>
-          <div class="c-btn -primary -inverse -no-br -thin js-viel-year"></div>
+          <div class="c-btn -primary -inverse -thin js-viel-year"></div>
         </div>
       </div>
 
-      <div id="layers" ></div>
+      <div id="layers"></div>
     </div>
 
+    <div class="c-mobile-legend">
+      <button id="legendBtn" class="c-btn -primary -inverse -thin js-action-legend" data-action="legend" title="Legend">O</button>
+      <div id="legend" class="c-legend legend-mobile -main"></div>
+    </div>
   </div>
 
-  <!-- <div id="legend" class="c-legend -main"></div> -->
 
   <div class="l-app-navbar">
     <div class="wrapper">
