Mobile legend styles

--- a/app/assets/javascripts/templates/legend.hbs
+++ b/app/assets/javascripts/templates/legend.hbs
@@ -13,7 +13,7 @@
   <li>
     <span class="name">
       {{layer.name}}
-      <button type="button" name="button" class="c-btn -secondary -icon -tiny js-btn-info">
+      <button type="button" name="button" class="c-btn -primary -icon -tiny js-btn-info">
         <svg class="c-icon -tiny -inverse"><use xlink:href="#icon-info"></use></svg>
       </button>
     </span>
