--- a/app/views/map/_mobile_index.html.erb
+++ b/app/views/map/_mobile_index.html.erb
@@ -33,7 +33,9 @@
     </div>
 
     <div class="c-mobile-legend">
-      <button id="legendBtn" class="c-btn -primary -inverse -thin js-action-legend" data-action="legend" title="Legend">O</button>
+      <button id="legendBtn" class="c-btn -primary -inverse -thin js-action-legend arrow-btn" data-action="legend" title="Legend">
+        <span class="arrow"></span>
+      </button>
       <div id="legend" class="c-legend legend-mobile -main"></div>
     </div>
   </div>
