--- a/app/assets/stylesheets/components/_mobile_legend.scss
+++ b/app/assets/stylesheets/components/_mobile_legend.scss
@@ -1,10 +1,43 @@
 
 .c-mobile-legend {
 
-  .js-action-legend {
-    position: absolute;
-    top: $small-box-space + 35px;
-    right: $small-box-space;
+  .legend-bar {
+    width: 100%;
+    background-color: $primary-color;
+  }
+
+  .arrow-btn {
+      width: 44px;
+      height: 44px;
+      padding: 0;
+
+    &.js-action-legend {
+      position: absolute;
+      top: $small-box-space + 35px;
+      right: 0;
+      border: 0;
+    }
+
+    &.js-legend-close {
+      margin-left: 12px;
+
+    }
+  }
+
+  .arrow {
+    display: inline-block;
+    border-right: 2px solid $primary-color;
+    border-top: 2px solid $primary-color;
+    transform: rotate(45deg);
+    width: 12px;
+    height: 12px;
+    margin-right: 4px;
+
+    &.-left {
+      transform: rotate(-135deg);
+      border-right: 2px solid white;
+      border-top: 2px solid white;
+    }
   }
 
   .legend-mobile {
@@ -15,7 +48,7 @@
     bottom: 0;
     background: $body-bg-color;
 
-    transition: width .2 $easeInCubic;
+    transition: width .2s $easeOutCubic;
 
     &.-main {
       max-width: 100%;
