Mobile menu logic

--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -27,14 +27,22 @@
   .modal-container {
     position: absolute;
     display: flex;
-    width: 80%;
-    max-width: $modal-max-width;
-    top: 50%;
-    left: 50%;
-    background: $body-bg-color;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 
-    transform: translate(-50%, -50%);
+    background: $body-bg-color;
     z-index: 1;
+
+    @media #{$mq-small} {
+      width: 80%;
+      max-width: $modal-max-width;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
   }
 
   .modal-content {
