--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title><%= yield :title %> - Global Cancer Project Map</title>
-    <meta name="viewport" content="width=1024">
+
+    <% if browser.device.ipad? %>
+      <meta name="viewport" content="width=1024">
+    <% else %>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+    <% end %>
+
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= Gon::Base.render_data %>
@@ -15,11 +21,19 @@
   </head>
   <body>
     <%= render "shared/icons" %>
-    <%= render "shared/header" %>
+
+    <% if browser.device.mobile? %>
+      <%= render "shared/header_mobile" %>
+    <% else %>
+      <%= render "shared/header" %>
+    <% end %>
+
     <section class="l-main">
       <%= yield %>
     </section>
+
     <%= render "shared/footer" %>
+
     <%# CND Libs %>
     <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.16.0/polyfill.min.js' %>
     <%= javascript_include_tag 'https://d3js.org/d3.v3.min.js' %>
