--- a/app/views/shared/_icons.html.erb
+++ b/app/views/shared/_icons.html.erb
@@ -18,6 +18,10 @@
 <path class="path1" fill="#68299b" stroke="#68299b" stroke-width="1.6" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" d="M30.4 16c0 7.953-6.447 14.4-14.4 14.4s-14.4-6.447-14.4-14.4c0-7.953 6.447-14.4 14.4-14.4s14.4 6.447 14.4 14.4z"></path>
 <path class="path2" fill="#fff" d="M17.067 17.067c0 0.589-0.478 1.067-1.067 1.067s-1.067-0.478-1.067-1.067v-6.4c0-0.589 0.478-1.067 1.067-1.067s1.067 0.478 1.067 1.067v6.4zM16 22.4c-0.589 0-1.067-0.478-1.067-1.067s0.478-1.067 1.067-1.067c0.589 0 1.067 0.478 1.067 1.067s-0.478 1.067-1.067 1.067v0zM16 3.2c-7.058 0-12.8 5.742-12.8 12.8s5.742 12.8 12.8 12.8c7.058 0 12.8-5.742 12.8-12.8s-5.742-12.8-12.8-12.8v0z"></path>
 </symbol>
+<symbol id="icon-menu" viewBox="0 0 39 32">
+<title>menu</title>
+<path class="path1" d="M0 28.444h39.111v3.556h-39.111v-3.556zM0 14.222h39.111v3.556h-39.111v-3.556zM0 0h39.111v3.556h-39.111v-3.556z"></path>
+</symbol>
 <symbol id="icon-message" viewBox="0 0 32 32">
 <title>message</title>
 <path class="path1" d="M31 1h-30c-0.552 0-1 0.447-1 1v20c0 0.553 0.448 1 1 1h6v6c0 0.382 0.218 0.73 0.561 0.898 0.34 0.166 0.75 0.127 1.053-0.109l8.729-6.789h13.657c0.552 0 1-0.447 1-1v-20c0-0.553-0.448-1-1-1z"></path>
