--- a/app/views/shared/_header_mobile.html.erb
+++ b/app/views/shared/_header_mobile.html.erb
@@ -17,44 +17,4 @@
   </div>
 </header>
 
-
-<div class="c-menu-mobile">
-  <svg class="c-icon icon-close -medium -primary js-menu-close">
-    <use xlink:href="#icon-close"></use>
-  </svg>
-
-  <li class="<%= active_page?(map_path) ? '-active' : '' %>">
-    <%= link_to (t 'map'), map_path %>
-  </li>
-  <li class="<%= active_page?(countries_path) ? '-active' : '' %>">
-    <%= link_to (t 'countries'), countries_path %>
-  </li>
-  <li class="<%= active_page?(cancers_path) ? '-active' : '' %>">
-    <%= link_to (t 'cancer_types'), cancers_path %>
-  </li>
-  <li class="<%= active_page?(about_path) ? '-active' : '' %>">
-    <%= link_to (t 'about'), about_path %>
-  </li>
-  <li>
-    <a href="/search">
-      <svg class="c-icon -medium -primary"><use xlink:href="#icon-search"></use></svg>
-    </a>
-  </li>
-</div>
-
-
-<!--   <ul>
-    <%#= render "shared/nav" %>
-    <% #if user_signed_in? %>
-      <li class="js-user-menu <%#= active_page?(user_session_path) ? '-active' : '' %>">
-        <button class="user-btn">
-          <div class="c-avatar" style="background-image: url(<%#= current_user.avatar_url(:thumb) %>)"></div>
-        </button>
-        <%#= render 'shared/user_menu' %>
-      </li>
-    <%# else %>
-      <li class="<%#= active_page?(user_session_path) ? '-active' : '' %>">
-        <%#= link_to (t 'login'), user_session_path %></a>
-      </li>
-    <% #end %>
-  </ul> -->
+<%= render 'shared/menu_mobile' %>
