--- a/app/views/shared/_menu_mobile.html.erb
+++ b/app/views/shared/_menu_mobile.html.erb
@@ -4,15 +4,17 @@
     <use xlink:href="#icon-close"></use>
   </svg>
 
-  <%= render "shared/nav" %>
-
   <% if user_signed_in? %>
     <div class="js-user-menu <%= active_page?(user_session_path) ? '-active' : '' %>">
       <button class="user-btn">
         <div class="c-avatar" style="background-image: url(<%= current_user.avatar_url(:thumb) %>)"></div>
       </button>
     </div>
+  <% end %>
 
+  <%= render "shared/nav" %>
+
+<% if user_signed_in? %>
     <ul>
       <li class="<%= active_page?(user_session_path) ? '-active' : '' %>">
         <%= link_to (t 'network'), user_path(:data => 'network', :id => current_user.id) %>
