Mobile bread crumbs

--- a/app/assets/javascripts/templates/breadcrumbs.hbs
+++ b/app/assets/javascripts/templates/breadcrumbs.hbs
@@ -7,10 +7,11 @@
         <a href="{{link}}"
           class="js-breadcrumb"
           name={{name}}
+          title="{{string}}"
           {{#if value}}data-value="{{value}}"{{/if}}
         >
           {{!-- <span class="globe-icon"><svg><use xlink:href="#icon-globe"</svg></span> --}}
-          {{string}}
+          <span>{{string}}</span>
         </a>
         {{!-- <span class="rhombus"></span> --}}
       </li>
