--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,9 @@
     <title><%= yield :title %> - Global Cancer Project Map</title>
 
     <%# if browser.device.ipad? %>
-      <meta name="viewport" content="width=1024">
+      <!-- <meta name="viewport" content="width=1024"> -->
     <%# else %>
-      <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+      <meta name="viewport" content="width=device-width, initial-scale=1">
     <%# end %>
 
     <%= csrf_meta_tags %>
