--- a/app/views/map/_mobile_index.html.erb
+++ b/app/views/map/_mobile_index.html.erb
@@ -1,15 +1,7 @@
 
 <section class="l-app -main -full">
-  <div class="l-app-upperbar">
-    <div class="wrapper">
-      <div class="row collapse">
-        <div class="column small-6">
-          <div class="c-breadcrumbs" id="breadcrumbs"></div>
-        </div>
-        <div class="column small-6">
-        </div>
-      </div>
-    </div>
+  <div class="l-app-upperbar wrapper">
+    <div class="c-breadcrumbs" id="breadcrumbs"></div>
   </div>
 
   <div class="l-app-map">
@@ -39,7 +31,6 @@
       <div id="legend" class="c-legend legend-mobile -main"></div>
     </div>
   </div>
-
 
   <div class="l-app-navbar">
     <div class="wrapper">
