--- a/app/views/map/_desktop_index.html.erb
+++ b/app/views/map/_desktop_index.html.erb
@@ -1,16 +1,8 @@
 
 <section class="l-app -main -full">
-  <div class="l-app-upperbar">
-    <div class="wrapper">
-      <div class="row collapse">
-        <div class="column small-6">
-          <div class="c-breadcrumbs" id="breadcrumbs"></div>
-        </div>
-        <div class="column small-6">
-          <div id="actionbar"></div>
-        </div>
-      </div>
-    </div>
+  <div class="l-app-upperbar wrapper">
+    <div class="c-breadcrumbs" id="breadcrumbs"></div>
+    <div id="actionbar"></div>
   </div>
 
   <div class="l-app-map">
