--- a/app/assets/stylesheets/components/_toolbar.scss
+++ b/app/assets/stylesheets/components/_toolbar.scss
@@ -1,9 +1,13 @@
 .c-toolbar {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   margin: 0;
   padding: 0;
   list-style: none;
+
+  @media #{$mq-small} {
+    justify-content: flex-end;
+  }
 
   .toolbar-item {
     color: $inverse-font-color;
@@ -22,7 +26,10 @@
     }
 
     &.-highlighted {
-      background-color: $app-bg-color;
+
+      @media #{$mq-small} {
+        background-color: $app-bg-color;
+      }
     }
 
     &.-hidden {
