Show sort by dropdown on mobile fix

--- a/app/assets/javascripts/templates/dropdown.hbs
+++ b/app/assets/javascripts/templates/dropdown.hbs
@@ -1,7 +1,7 @@
 <div class="c-dropdown {{className}}">
   <span>{{#if label}}{{label}}{{/if}}</span>
   <div class="dropdown-value js-open">{{current.name}}</div>
-  <div class="dropdown-content {{#if open}}-open{{/if}}">
+  <div class="dropdown-content{{#if open}} -open{{/if}}{{#if contentClassName}} {{contentClassName}}{{/if}}">
     {{#each options}}
       <div class="dropdown-item">
         <a class="js-option" data-value="{{value}}" name="{{name}}">{{name}}</a>
