Mobile user menu

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -21,6 +21,11 @@
     height: 38px;
   }
 
+  &.-normal {
+    width: 70px;
+    height: 70px;
+  }
+
   &.-medium {
     width: 120px;
     height: 120px;
