--- a/app/views/shared/_menu_mobile.html.erb
+++ b/app/views/shared/_menu_mobile.html.erb
@@ -5,54 +5,65 @@
   </svg>
 
   <% if user_signed_in? %>
-    <div class="js-user-menu <%= active_page?(user_session_path) ? '-active' : '' %>">
+    <div class="js-mobile-user-menu menu-content <%= active_page?(user_session_path) ? '-active' : '' %>">
       <button class="user-btn">
-        <div class="c-avatar" style="background-image: url(<%= current_user.avatar_url(:thumb) %>)"></div>
+        <div class="c-avatar -normal" style="background-image: url(<%= current_user.avatar_url(:thumb) %>)"></div>
       </button>
     </div>
   <% end %>
 
-  <%= render "shared/nav" %>
+  <ul class="menu-content">
+    <%= render "shared/nav" %>
+  </ul>
 
-<% if user_signed_in? %>
-    <ul>
-      <li class="<%= active_page?(user_session_path) ? '-active' : '' %>">
-        <%= link_to (t 'network'), user_path(:data => 'network', :id => current_user.id) %>
-      </li>
-      <li class="<%= active_page?(user_session_path) ? '-active' : '' %>">
-        <%= link_to (t 'projects'), user_path(:data => 'projects', :id => current_user.id) %>
-      </li>
-      <li class="<%= active_page?(user_session_path) ? '-active' : '' %>">
-        <%= link_to (t 'posts'), user_path(:data => 'posts', :id => current_user.id) %>
-      </li>
-      <li class="<%= active_page?(user_session_path) ? '-active' : '' %>">
-        <%= link_to (t 'events'), user_path(:data => 'events', :id => current_user.id) %>
-      </li>
-      <li class="<%= active_page?(user_session_path) ? '-active' : '' %>">
-        <%= link_to user_path(:data => 'messages', :id => current_user.id) do %>
-          <span>
-            <%= t 'messages' %>
-            <div class="c-badge -relative messages-badge <%= current_user.unread_inbox_count > 0 ? '' : '-hidden' %>"><%= current_user.unread_inbox_count %></div>
-          </span>
-        <% end %>
-      </li>
-    </ul>
-    <ul class="-separator">
-      <li class="<%= active_page?(user_session_path) ? ' -active' : '' %>">
-        <%= link_to (t 'edit_profile'), edit_user_path(current_user.id) %>
-      </li>
-    </ul>
-    <ul>
-      <li class="logout">
-        <%= link_to (t 'logout'), destroy_user_session_path, :method => 'delete' %>
-      </li>
-    </ul>
-
+  <% if user_signed_in? %>
+    <button class="c-btn -primary button">
+      <%= link_to (t 'logout'), destroy_user_session_path, :method => 'delete' %>
+    </button>
   <% else %>
-    <ul>
-      <li class="<%= active_page?(user_session_path) ? '-active' : '' %>">
-        <%= link_to (t 'login'), user_session_path %></a>
-      </li>
-    </ul>
+    <button class="c-btn -primary button">
+      <%= link_to (t 'login'), user_session_path %></a>
+    </button>
   <% end %>
+
+
+<!-- User menu content -->
+  <% if user_signed_in? %>
+    <div class="back js-mobile-user-menu menu-content -hidden">
+      <svg class="c-icon icon-arrow -medium -primary">
+        <use xlink:href="#icon-arrow"></use>
+      </svg>
+      Back
+    </div>
+
+    <div class="menu-content -hidden">
+      <ul>
+        <li class="<%= active_page?(user_session_path) ? '-active' : '' %>">
+          <%= link_to (t 'network'), user_path(:data => 'network', :id => current_user.id) %>
+        </li>
+        <li class="<%= active_page?(user_session_path) ? '-active' : '' %>">
+          <%= link_to (t 'projects'), user_path(:data => 'projects', :id => current_user.id) %>
+        </li>
+        <li class="<%= active_page?(user_session_path) ? '-active' : '' %>">
+          <%= link_to (t 'posts'), user_path(:data => 'posts', :id => current_user.id) %>
+        </li>
+        <li class="<%= active_page?(user_session_path) ? '-active' : '' %>">
+          <%= link_to (t 'events'), user_path(:data => 'events', :id => current_user.id) %>
+        </li>
+        <li class="<%= active_page?(user_session_path) ? '-active' : '' %>">
+          <%= link_to user_path(:data => 'messages', :id => current_user.id) do %>
+            <span>
+              <%= t 'messages' %>
+              <div class="c-badge -relative messages-badge <%= current_user.unread_inbox_count > 0 ? '' : '-hidden' %>"><%= current_user.unread_inbox_count %></div>
+            </span>
+          <% end %>
+        </li>
+      </ul>
+
+      <button class="c-btn -primary -inverse button">
+        <%= link_to (t 'edit_profile'), edit_user_path(current_user.id) %>
+      </button>
+    </div>
+  <% end %>
+
 </div>
