--- a/app/views/shared/_menu_mobile.html.erb
+++ b/app/views/shared/_menu_mobile.html.erb
@@ -5,14 +5,14 @@
   </svg>
 
   <% if user_signed_in? %>
-    <div class="js-mobile-user-menu menu-content <%= active_page?(user_session_path) ? '-active' : '' %>">
+    <div class="js-mobile-user-menu menu-content -default <%= active_page?(user_session_path) ? '-active' : '' %>">
       <button class="user-btn">
         <div class="c-avatar -normal" style="background-image: url(<%= current_user.avatar_url(:thumb) %>)"></div>
       </button>
     </div>
   <% end %>
 
-  <ul class="menu-content">
+  <ul class="menu-content -default">
     <%= render "shared/nav" %>
   </ul>
 
