--- a/app/assets/stylesheets/components/_menu_mobile.scss
+++ b/app/assets/stylesheets/components/_menu_mobile.scss
@@ -3,7 +3,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  bottom: 0;
+  height: 100vh;
   width: 0;
   z-index: 3;
   opacity: 0;
@@ -15,7 +15,7 @@
 
   &.-active {
     opacity: 1;
-    width: 100%;
+    width: 100vw;
 
     .icon-close {
       display: initial;
@@ -83,7 +83,7 @@
 
   button {
     &.button {
-      position: fixed;
+      position: absolute;
       bottom: 0;
       width: 100%;
 
