--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,17 +7,17 @@
           <ul>
             <li>
               <a href="https://www.linkedin.com/topic/global-oncology" alt="Linkedin" title="Linkedin">
-                <svg class="c-icon icon-linkedin -blue -hv-opac"><use xlink:href="#icon-linkedin"></use></svg>
+                <svg class="c-icon icon-linkedin -primary -hv-opac"><use xlink:href="#icon-linkedin"></use></svg>
               </a>
             </li>
             <li>
               <a href="https://twitter.com/globalonc" alt="Twitter" title="Twitter">
-                <svg class="c-icon icon-twitter -blue -hv-opac"><use xlink:href="#icon-twitter"></use></svg>
+                <svg class="c-icon icon-twitter -primary -hv-opac"><use xlink:href="#icon-twitter"></use></svg>
               </a>
             </li>
             <li>
               <a href="https://www.facebook.com/globalonc" alt="Facebook" title="Facebook">
-                <svg class="c-icon icon-facebook -blue -hv-opac"><use xlink:href="#icon-facebook"></use></svg>
+                <svg class="c-icon icon-facebook -primary -hv-opac"><use xlink:href="#icon-facebook"></use></svg>
               </a>
             </li>
           </ul>
