Hide mobile menu children when inactive

--- a/app/assets/stylesheets/components/_menu_mobile.scss
+++ b/app/assets/stylesheets/components/_menu_mobile.scss
@@ -13,9 +13,14 @@
 
   background-color: white;
 
+  & * { display: none; }
+
   &.-active {
     opacity: 1;
     width: 100vw;
+
+    & * { display: inherit; }
+
 
     .icon-close {
       display: initial;
