--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -1,6 +1,6 @@
 .c-btn {
   @extend %reset-btn;
-  padding: $button-y-padding $button-x-padding;
+  padding: $button-y-padding $inline-space;
   color: white;
   display: inline-block;
 
@@ -10,6 +10,10 @@
   text-transform: uppercase;
 
   border-radius: 0;
+
+  @media #{$mq-small} {
+    padding: $button-y-padding $button-x-padding;
+  }
 
   &.-circle {
     display: flex;
