--- a/app/assets/stylesheets/components/_pipe_list.scss
+++ b/app/assets/stylesheets/components/_pipe_list.scss
@@ -4,6 +4,11 @@
 
   display: flex;
   padding-bottom: $base-space;
+  justify-content: center;
+
+  @media #{$mq-small} {
+    justify-content: flex-start;
+  }
 
   li {
     padding: 0 ($base-space / 2);
