--- a/app/assets/stylesheets/components/title-btn.scss
+++ b/app/assets/stylesheets/components/title-btn.scss
@@ -1,15 +1,24 @@
 .c-title-btn {
   display: flex;
   margin-bottom: $box-space / 2;
-  max-height: 50px;
+  flex-flow: column;
+  justify-content: center;
   align-items: center;
+
+  @media #{$mq-small} {
+    flex-flow: row;
+    justify-content: flex-start;
+    align-items: center;
+  }
 
   h1, h2, h3 {
     margin-bottom: 0;
   }
 
   .c-btn {
-    margin-left: $inline-space;
+    @media #{$mq-small} {
+      margin-left: $inline-space;
+    }
   }
 
   & *:first-child {
