--- a/app/views/investigators/show.html.erb
+++ b/app/views/investigators/show.html.erb
@@ -6,6 +6,33 @@
     <div class="l-app-map">
       <div id="map" class="c-map"></div>
     </div>
+  <% else %>
+    <div class="c-mobile-btns-container">
+      <div id="followButton">
+        <% if user_signed_in? %>
+          <button class="c-btn -secondary -inverse -thin js-btn-follow"
+            data-followed="<%= @followed %>"
+            data-id="<%= @followed_id %>"
+            data-resource="<%= @followed_resource %>">
+              <% if (@followed) %>
+                <svg class="c-icon -secondary -normal">
+                  <use xlink:href="#icon-minus"></use>
+                </svg>
+              <% else %>
+                <svg class="c-icon -secondary -normal">
+                  <use xlink:href="#icon-collaborators"></use>
+                </svg>
+              <% end %>
+          </button>
+        <% else %>
+          <a href="/users/sign_in" class="c-btn -secondary -inverse -thin">
+            <svg class="c-icon -normal">
+              <use xlink:href="#icon-collaborators"></use>
+            </svg>
+          </a>
+        <% end %>
+      </div>
+    </div>
   <% end %>
 
   <% if !browser.device.mobile? %>
@@ -52,17 +79,8 @@
                 <li><%= @following %> Following</li>
                 <li><%= @followers %> Followers</li>
               </ul>
-
-              <% if browser.device.mobile? %>
-                <div class="c-title-btn">
-                  <% if user_signed_in? && current_user.investigator == @investigator %>
-                    <%= link_to (t 'not_me'), remove_relation_investigator_path(@investigator), method: :patch, class: 'c-btn -transparent' %>
-                  <% elsif user_signed_in? && current_user.investigator.blank? && @investigator.user.blank? %>
-                    <%= link_to (t 'this_is_me'), relation_request_investigator_path(@investigator), method: :patch, class: 'c-btn -transparent' %>
-                  <% end %>
-                </div>
-              <% end %>
             </div>
+
             <div class="column small-12 medium-6">
               <ul class="c-pipe-list">
                 <% if inv_user.present? %>
@@ -89,6 +107,16 @@
               </ul>
             </div>
           </div>
+
+          <% if browser.device.mobile? %>
+            <div class="c-title-btn">
+              <% if user_signed_in? && current_user.investigator == @investigator %>
+                <%= link_to (t 'not_me'), remove_relation_investigator_path(@investigator), method: :patch, class: 'c-btn -transparent' %>
+              <% elsif user_signed_in? && current_user.investigator.blank? && @investigator.user.blank? %>
+                <%= link_to (t 'this_is_me'), relation_request_investigator_path(@investigator), method: :patch, class: 'c-btn -transparent' %>
+              <% end %>
+            </div>
+          <% end %>
 
           <% if !browser.device.mobile? %>
             <table class="c-numbers-list">
