--- a/app/views/investigators/show.html.erb
+++ b/app/views/investigators/show.html.erb
@@ -7,7 +7,16 @@
       <div id="map" class="c-map"></div>
     </div>
   <% else %>
+    <%= render 'shared/user_actions_mobile'%>
+
     <div class="c-mobile-btns-container">
+      <button class="c-btn -secondary -border -thin js-btn-more">
+        <svg class="c-icon -normal -inverse">
+          <use xlink:href="#icon-plus"></use>
+        </svg>
+      </button>
+
+
       <div id="followButton">
         <% if user_signed_in? %>
           <button class="c-btn -secondary -inverse -thin js-btn-follow"
